* Clarified action to take when parse error occurs.  Credit to Jim Shore.
* Added Enabled and Disabled properties to appropriate controls.  Credit to Levi Khatskevitch.
* Added Text property to ButtonTester.  Credit to Levi Khatskevitch.
* Fixed Enabled property in CheckboxTester for Framework 1.0.  Credit to Levi Khatskevitch.

(Note: Jim Shore was named Jim Little before the release of version 1.4.)


Changes in NUnitAsp 1.3:
Produced by Jim Little.
* Browser.ElapsedServerTime now works.  Credit to Jim Little.
* Added support for multiline text boxes.  Credit to "(luKa)."
* Updated installation guide for error caused by XMLSpy.  Credit to Peter Wijntjes.
* Many improvements to tutorial, including update for NUnit 2.0.  Credit to Andrew Enfield.
* Trimmed number of third-party files included in distribution.  Credit to Jim Little.
* Fixed defect which caused NUnitAsp to forget that checkboxes were checked.  Credit to Jim Little.
* Significantly reduced XHTML requirement.  Credit to Rick Currence.
* Rewrote Quick-Start Guide.  Credit to Jim Little.
* Added run-time exception to explain common problem with [SetUp] attribute.  Credit to Jim Little. 


Changes in NUnitAsp 1.2.1:
Produced by Jim Little.
* NUnit 2.0 support.  Credit to R. Owen Rogers, Drew Noakes, and Jim Little.
* NUnit 2.0 migration guide.  Credit to Jim Little.
* Compilation FAQ question.  Credit to Jim Little.
* Minor documentation fixes.  Credit to Jim Little.


Changes in NUnitAsp 1.2:
Produced by Jim Little.
* Documentation.  Lots of it. Credit to Jim Little.
* Added support for pop-up windows in AnchorTester.  Credit to Jacob Lawlor.
* 404 errors no longer occur when retrieving links to document fragments (http://foo.com/index.html#name).  The fragment link is ignored and the main page is retrieved.  Credit to Jim Little.
* Fixed attribute parsing so it ignores case.  Credit to Jim Little.
* Added support for changing browser user-agent.  Credit to Jim Little.