@@ -1,0 +1,14 @@
+<%@ Page language="c#" Codebehind="CredentialsTest.aspx.cs" AutoEventWireup="false" Inherits="NUnitAspTestPages.Credentials.CredentialsTest" %>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://localhost/NUnitAsp/web/dtd/xhtml1-transitional.dtd">
+<HTML>
+  <HEAD>
+    <title>CredentialsTest</title>
+    <meta name="GENERATOR" Content="Microsoft Visual Studio 7.0">
+    <meta name="CODE_LANGUAGE" Content="C#">
+  </HEAD>
+  <body>
+    <form id="CredentialsTest" method="post" runat="server">
+      <asp:Label id="userId" runat="server">Not Known</asp:Label>
+    </form>
+  </body>
+</HTML>
